// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A default option strip 1`] = `
.c3 {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Inter",sans-serif;
  color: rgba(0,0,0,0.8);
  font-weight: 400;
  font-size: 11px;
  -webkit-letter-spacing: 0.005em;
  -moz-letter-spacing: 0.005em;
  -ms-letter-spacing: 0.005em;
  letter-spacing: 0.005em;
  line-height: 16px;
}

.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.1);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0.1);
  box-sizing: border-box;
  border-radius: 2px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 24px;
  padding: 5px;
  position: relative;
}

.c1 .c2 {
  line-height: 0;
}

.c1 input {
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  box-sizing: border-box;
  border-radius: 2px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 24px;
  padding: 5px;
  position: relative;
}

.c4 .c2 {
  line-height: 0;
}

.c4 input {
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
}

<div
  className="c0"
>
  <div
    className="c1"
    selected={true}
  >
    <input
      checked={true}
      name="options-strip-One"
      onChange={[Function]}
      type="radio"
      value="1"
    />
    <span
      className="c2 c3"
      size="small"
    >
      One
    </span>
  </div>
  <div
    className="c4"
    selected={false}
  >
    <input
      checked={false}
      name="options-strip-One"
      onChange={[Function]}
      type="radio"
      value="2"
    />
    <span
      className="c2 c3"
      size="small"
    >
      Two
    </span>
  </div>
</div>
`;

exports[`A option strip with default value set 1`] = `
.c3 {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: "Inter",sans-serif;
  color: rgba(0,0,0,0.8);
  font-weight: 400;
  font-size: 11px;
  -webkit-letter-spacing: 0.005em;
  -moz-letter-spacing: 0.005em;
  -ms-letter-spacing: 0.005em;
  letter-spacing: 0.005em;
  line-height: 16px;
}

.c0 {
  box-sizing: border-box;
  border-radius: 2px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0:hover {
  box-shadow: inset 0 0 0 1px rgba(0,0,0,0.1);
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: rgba(0,0,0,0.1);
  box-sizing: border-box;
  border-radius: 2px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 24px;
  padding: 5px;
  position: relative;
}

.c1 .c2 {
  line-height: 0;
}

.c1 input {
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
}

.c4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  box-sizing: border-box;
  border-radius: 2px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  height: 24px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 24px;
  padding: 5px;
  position: relative;
}

.c4 .c2 {
  line-height: 0;
}

.c4 input {
  position: absolute;
  width: 100%;
  height: 100%;
  opacity: 0;
}

<div
  className="c0"
  defaultValue="1"
>
  <div
    className="c1"
    selected={true}
  >
    <input
      checked={true}
      name="options-strip-One"
      onChange={[Function]}
      type="radio"
      value="1"
    />
    <span
      className="c2 c3"
      size="small"
    >
      One
    </span>
  </div>
  <div
    className="c4"
    selected={false}
  >
    <input
      checked={false}
      name="options-strip-One"
      onChange={[Function]}
      type="radio"
      value="2"
    />
    <span
      className="c2 c3"
      size="small"
    >
      Two
    </span>
  </div>
</div>
`;
